--- a/Logmaster.yaml
+++ b/Logmaster.yaml
@@ -50,14 +50,14 @@ zabbix_export:
           history: 5d
           trends: '0'
           value_type: TEXT
-        - uuid: 6b50ca62f26d4f489abb93bd11dd8617
+        - uuid: 64fa15bf4bdb4e00b5987996c138cf1a
           name: Uptime
           type: SNMP_AGENT
           snmp_oid: .1.3.6.1.2.1.1.3.0
-          key: sysUpTimeInstance
+          key: sysUpTime.0
           history: 5d
           trends: 10d
-          units: Days
+          units: uptime
           preprocessing:
             - type: MULTIPLIER
               parameters:
